[package]
name = "custom-apl"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_apl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
ahash = "0.8.6"
getrandom = { version = "0.2.2", features = ["custom"] }
anchor-spl = "0.25.0"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
